// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should match snapshot without a type 1`] = `
<div
  className="ter-alert ter-alert--default"
  onClick={[MockFunction]}
>
  This is an alert.
</div>
`;

exports[`Alert should match the snapshot 1`] = `
<div
  className="ter-alert ter-alert--ter-alert--default"
  onClick={[MockFunction]}
>
  This is an alert.
</div>
`;
